HelloUltraviolet/Fixtures/RejectedSource/Expressions/FloatSuffixMismatch/Expected.uv
//! Expected diagnostic metadata for the FloatSuffixMismatch rejected-source specimen.

expectedDiagnostic("E-TYP-1531", "diag.16.LiteralAndNameExpressions")
